--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Dino Game</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="desert">
+            <h2 id="alert"></h2>
+            <div class="grid">
+                <div class="dino"></div>
+            </div>
+        </div>
+    </div>
     <script src="/code.js" defer></script>
 </body>
 </html>
